--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Loszi</title>
     </head>
     <body>
-        <h1>Hi!</h1>
+        <h1>Hello, this is a website I just made and will be working on.</h1>
     </body>
 </html>
