--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     </head>
     <body>
         <h1>Hello, this is a website I just made and will be working on.</h1>
+        <img src="https://i.pinimg.com/236x/d8/0d/1e/d80d1efe3a4b6b4d8bd186bdd788902c--comment-images-elephants.jpg">
+        <h1>Me IRL btw:</h1>
+        <img src="https://preview.redd.it/i88053c4s6a71.png?width=3011&format=png&auto=webp&s=5873e463dbf14c3521591d561a45a439c3858c7f" width="500" height="500">
+        <audio autoplay>
+            <source src="https://static.wikia.nocookie.net/leagueoflegends/images/9/9c/Shaco_Original_Taunt.ogg/revision/latest?cb=20221014121304" type="audio/ogg">
+        </audio>
     </body>
 </html>
