--- a/about.html
+++ b/about.html
@@ -17,14 +17,14 @@
             <p>
                 <b>Name:</b> Jaden<br>
                 <b>Age:</b> 19<br>
-                <b>Hobbys:</b> Music, Chess, Coffee, Video games, Walks, Technology<br>
+                <b>Hobbies:</b> Music, Chess, Coffee, Video games, Walks, Technology<br>
                 <b>Favorite Artists:</b> Michael Jackson, Nirvana<br>
                 <b>Favorite Video Game:</b> League of Legends<br>
                 <b>School:</b> Stevens Institue of Technology<br>
                 <b>Major:</b> Computer Science<br>
             </p>
-            <img style="float: right; margin-top: -700px; margin-right: 200px; height: 300px;" src="img/stevens.png">
-            <img style="float: right; margin-top: -450px; margin-right: 100px; height: 500px;" src="img/mj.png">
+            <img class="stevens" src="img/stevens.png">
+            <img class="mj" src="img/mj.png">
         </div>
     </body>
 </html>
