removed about and added social links

--- a/index.html
+++ b/index.html
@@ -9,11 +9,25 @@
     <body>
         <div class="index">
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
         </div>
         <div class="content">
-            <h1>Welcome To My Website!</h1>
+            <h1>Who Am I?</h1>
+            <p>
+                <b>Name:</b> Jaden<br>
+                <b>Age:</b> 19<br>
+                <b>Hobbies:</b> Music, Chess, Coffee, Video games, Walks, Technology<br>
+                <b>Favorite Artists:</b> Michael Jackson, Nirvana<br>
+                <b>Favorite Video Game:</b> League of Legends<br>
+                <b>School:</b> Stevens Institue of Technology<br>
+                <b>Major:</b> Computer Science<br>
+            </p>
+            <a href="https://discordapp.com/users/310577492966506496"><img style="height: 50px;" src="img/discord.png"></a> 
+            <a href="https://github.com/Loszii"><img style="height: 50px;" src="img/gitlogo.png"></a>
+        </div>
+        <div class="images">
+            <img style="height: 500px;" src="img/mj.png">
+            <img style="height: 300px;" src="img/stevens.png">
         </div>
     </body>
 </html>
