changed entire site

--- a/index.html
+++ b/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>Loszi</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="index">
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-        </div>
-        <div class="content">
-            <h1>Who Am I?</h1>
-            <p>
-                <b>Name:</b> Jaden<br>
-                <b>Age:</b> 19<br>
-                <b>Hobbies:</b> Music, Chess, Coffee, Video games, Walks, Technology<br>
-                <b>Favorite Artists:</b> Michael Jackson, Nirvana<br>
-                <b>Favorite Video Game:</b> League of Legends<br>
-                <b>School:</b> Stevens Institue of Technology<br>
-                <b>Major:</b> Computer Science<br>
-            </p>
-            <a href="https://discordapp.com/users/310577492966506496"><img style="height: 50px;" src="img/discord.png"></a> 
-            <a href="https://github.com/Loszii"><img style="height: 50px;" src="img/gitlogo.png"></a>
-        </div>
-        <div class="images">
-            <img style="height: 500px;" src="img/mj.png">
-            <img style="height: 300px;" src="img/stevens.png">
-        </div>
-    </body>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Loszi's Site</title>
+</head>
+<body>
+<div class="main">
+    <h1>Hey, I'm Jaden</h1>
+    <p>A 19 year old Computer Science major at <br>Stevens Institute of Technology</p>
+    <div class="links">
+        <a href="https://discordapp.com/users/310577492966506496"><img src="img/discord.png"></a>
+        <a href="https://github.com/Loszii"><img src="img/gitlogo.png"></a>
+    </div>
+</div>
+<div class="stevens">
+    <img src="img/stevens.png">
+</div>
+<div class="face">
+    <img src="img/selfie.jpg">
+</div>
+</body>
 </html>
