--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Loszi's Site</title>
@@ -10,16 +11,16 @@
 <div class="main">
     <h1>Hey, I'm Jaden</h1>
     <p>A 19 year old Computer Science major at <br>Stevens Institute of Technology</p>
-    <div class="links">
+    <div id="links">
         <a href="https://discordapp.com/users/310577492966506496"><img src="img/discord.png"></a>
         <a href="https://github.com/Loszii"><img src="img/gitlogo.png"></a>
     </div>
 </div>
-<div class="stevens">
-    <img src="img/stevens.png">
+<div>
+    <img id="stevens" src="img/stevens.png">
 </div>
-<div class="face">
-    <img src="img/selfie.jpg">
+<div>
+    <img id="face" src="img/selfie.jpg">
 </div>
 </body>
 </html>
