--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loszi's Site</title>
 </head>
 <body>
-
-
+    <div id="container">
+        <canvas id="canvas1"></canvas>
+        <audio id="audio1" controls></audio>
+        <input type="file" id="fileupload" accept="audio/*">
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
