--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <canvas id="canvas1"></canvas>
         <audio id="audio1" controls></audio>
         <input type="file" id="fileupload" accept="audio/*">
+        <button id="button1">Bars</button>
+        <button id="button2">Circle</button>
     </div>
     <script src="script.js"></script>
 </body>
