Moved all functions inside same callback function. Added drawLines() which has lines moving horizontally to the beat and a button to select it. Also created a function to get avg freq.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <input type="file" id="fileupload" accept="audio/*">
             <button id="barButton">Bars</button>
             <button id="circleButton">Circle</button>
+            <button id="lineButton">Lines</button>
             <button id="red">Red</button>
             <button id="green">Green</button>
             <button id="blue">Blue</button>
