Found bug when changing file and drawLine(). Removed ability to change file and changed frontend to display song name in audio controls

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <div id="container">
         <div id="buttons">
-            <input type="file" id="fileupload" accept="audio/*">
             <button id="barButton">Bars</button>
             <button id="circleButton">Circle</button>
             <button id="lineButton">Lines</button>
@@ -21,6 +20,9 @@
         </div>
         <canvas id="canvas1"></canvas>
         <audio id="audio1" controls></audio>
+        <div id="songData">
+            <input type="file" id="fileupload" accept="audio/*">
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
