added drawSquares() and drawSquare() for new visualizer mode. also created button and changed some div widths to fit extra button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <button id="barButton">Bars</button>
                 <button id="circleButton">Circle</button>
                 <button id="lineButton">Lines</button>
+                <button id="squareButton">Squares</button>
             </div>
             <div id="sliders">
                 <input id ="redSlider" type="range" min="0" max="255" value = "255">
