changed play button to have icon. hid audio controls until file chosen aswell as centered them. also shortened code by adding color variable and made song name and change button in index.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
                     Click To Upload File
                     <input type="file" id="fileupload" accept="audio/*">
                 </label>
+                <h1 id="titleText"></h1>
+                <button id="changeButton">Change</button>
             </div>
             <div id="audioControls">
-                <audio id="audio1"></audio>
-                <button id="playButton">Play</button>
+                <audio id="audio1" loop="true"></audio>
+                <button id="pauseButton">| |</button>
                 <input id="timeSlider" type="range" value="0" min="0">
                 <h1 id="timeDisplay">0 / 0</h1>
             </div>
