put all visualizers in seperate file, make script a module, and got rid of global variables for simplicity

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="container">
         <div id ="content">
             <div id="songData">
-                <label for="fileupload" id="fileLabel">
+                <label for="fileUpload" id="fileLabel">
                     Click To Upload File
-                    <input type="file" id="fileupload" accept="audio/*">
+                    <input type="file" id="fileUpload" accept="audio/*">
                 </label>
                 <h1 id="titleText"></h1>
                 <button id="changeButton">Change</button>
@@ -38,6 +38,6 @@
         </div>
         <canvas id="canvas1"></canvas>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
