changed xTracker to be stored in drawData() and moved some stuff around. made it so you can change file without refreshing page since xTracker bug is gone.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
     <div id="container">
         <div id ="content">
             <div id="songData">
-                <label for="fileUpload" id="fileLabel">
-                    Click To Upload File
-                    <input type="file" id="fileUpload" accept="audio/*">
-                </label>
-                <h1 id="titleText"></h1>
-                <button id="changeButton">Change</button>
+                <label for="fileUpload" id="fileLabel">Click me to upload a mp3</label>
+                <input type="file" id="fileUpload" accept="audio/*">
             </div>
             <div id="audioControls">
                 <audio id="audio1" loop="true"></audio>
