made gaps between pulses exactly equal

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button id="circleButton">Circle</button>
                 <button id="lineButton">Lines</button>
                 <button id="squareButton">Squares</button>
-                <button id="pulseButton">Pulse</button>
+                <button id="pulseButton">Pulses</button>
             </div>
             <div id="sliders">
                 <input id="redSlider" type="range" min="0" max="255" value="255">
