fixed major bug with multiple animation loops running at same time causing autoColor to skip +1 each time. change coloring to only highlight active modes, aswell as slightly shifted drawLines() up

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button id="pulseButton">Pulses</button>
             </div>
             <div id="sliders">
-                <button id="autoColor">Auto (OFF)</button>
+                <button id="autoColor">Auto</button>
                 <input id="redSlider" type="range" min="0" max="255" value="255">
                 <input id="greenSlider" type="range" min="0" max="255" value="255">
                 <input id="blueSlider" type="range" min="0" max="255" value="255">
