added errorScreen when viewport not supported

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         </div>
         <canvas id="canvas1"></canvas>
     </div>
+    <div id="errorScreen">
+        <h1 id ="errorMessage">This site only works with fullscreen computer browsers!</h1>
+    </div>
     <script src="script.js" type="module"></script>
 </body>
 </html>
