--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <input id="blueSlider" type="range" min="0" max="255" value="255">
             </div>
         </div>
+        <div id="errorScreen">
+            <h1 id ="errorMessage">This site only works with fullscreen computer browsers!</h1>
+        </div>
         <canvas id="canvas1"></canvas>
     </div>
     <script src="script.js" type="module"></script>
