made more responsive and changed font, also lowered error window threshold

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="expires" content="0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Loszi's Site</title>
 </head>
 <body>
@@ -19,7 +21,7 @@
                 <button id="pauseButton">&#9658;</button>
                 <input id="timeSlider" type="range" value="0" min="0">
                 <h1 id="timeDisplay">0 / 0</h1>
-                <div>
+                <div id="volumeDisplay">
                     <img id="volumeIcon" src="res/audio.png">
                     <input id="volumeSlider" type="range" min="0" max="10" value="10">
                 </div>
